CICO-5955: fixed issue when next/prev highlights the out of bound date

--- a/guestweb/css/less/snt.less
+++ b/guestweb/css/less/snt.less
@@ -1211,21 +1211,6 @@ padding:5px 8px 2px 0;
   color: #ac9557;
 }
 
-// must not be changed
-.pickadate-cell .pickadate-outofrange-disabled, 
-.pickadate-cell .pickadate-outofrange-disabled a,
-.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled,
-.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled a {
-  // date must be hidden
-  // user must not see or select it
-  color: #7d6742;
-  color: transparent;
-  cursor: default;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none;
-}
-
 .pickadate-cell .pickadate-enabled {
   cursor: pointer;
   font-size: 12px;
@@ -1249,8 +1234,6 @@ padding:5px 8px 2px 0;
   border-right: 0px !important;
 }
 
-
-
 .pickadate-centered-heading {
   text-transform: uppercase;
   color:#fffefe;
@@ -1273,6 +1256,26 @@ padding:5px 8px 2px 0;
 .pickadate-controls a {
   text-decoration: none;
   font-size: 0.9em;
+}
+
+
+// must not be changed
+// must only be update for different hotel
+.pickadate-cell .pickadate-outofrange-disabled, 
+.pickadate-cell .pickadate-outofrange-disabled a,
+.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled,
+.pickadate-cell .pickadate-disabled.pickadate-outofrange-disabled a,
+.pickadate-cell .pickadate-active.pickadate-outofrange-disabled,
+.pickadate-cell .pickadate-active.pickadate-outofrange-disabled a {
+  // date must be hidden
+  // user must not see or select it
+  color: #7d6742;
+  color: transparent;
+  background-color: #7d6742;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
 
 /* ------------------date -picker ends here-------------------------- */
